fixed visual layout bugs

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -21,7 +21,7 @@
 
 @layer components {
   .container {
-    @apply xl:px-20 2xl:px-40;
+    @apply px-6 md:px-10 xl:px-20 2xl:px-40;
   }
 }
 
